[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/art/spider/spider_1.png" type="Texture" id=1]
[ext_resource path="res://assets/art/spider/spider_2.png" type="Texture" id=2]
[ext_resource path="res://assets/art/spider/spider_idle.png" type="Texture" id=3]
[ext_resource path="res://scenes/tasks/spider/SpiderStates.gd" type="Script" id=4]
[ext_resource path="res://scenes/tasks/spider/Spider.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 34.0588

[node name="Spider" type="AnimatedSprite"]
z_index = 1
frames = SubResource( 1 )
animation = "idle"
playing = true
script = ExtResource( 5 )

[node name="SpiderStates" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 61 )
shape = SubResource( 2 )
disabled = true

[node name="StateChangeTimer" type="Timer" parent="."]
one_shot = true

[node name="EscapeTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="BiteFreeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="StateChangeTimer" to="." method="_on_StateChangeTimer_timeout"]
[connection signal="timeout" from="EscapeTimer" to="." method="_on_EscapeTimer_timeout"]
[connection signal="timeout" from="BiteFreeTimer" to="." method="_on_BiteFreeTimer_timeout"]
